basic styles for .mobile were set

--- a/index.html
+++ b/index.html
@@ -236,13 +236,13 @@
             </div>
             </div>
         </div>
-        <div class="mobile container d-flex flex-row">
+        <div class="mobile container">
             <div class="mobile__img">
                 <img src="source/images/mobile-img.jpg">
             </div>
-            <div class="mobile__text">
+            <div class="mobile__text-block">
                 <h1 class="mobile__title">Excellent for Mobile Devices.</h1>
-                <p>
+                <p class="mobile__text">
                     Qisi enim ad&nbsp;minim veniam, quis nostrud exerci tation ullamcorper
                     suscipit lobortis nisl ut&nbsp;aliquip ex&nbsp;ea&nbsp;commodo consequat.
                     Investigationes demonstraverunt lectores legere me&nbsp;lius quod ii&nbsp;legunt
