--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a class="menu__item-link nav-link" href="#carousel">Home</a>
                 </li>
                 <li class="menu__item nav-item">
-                    <a class="menu__item-link nav-link" href="#features">About&nbsp;US</a>
+                    <a class="menu__item-link nav-link" href="#features">About&nbsp;Us</a>
                 </li>
                 <li class="menu__item nav-item">
                     <a class="menu__item-link nav-link" href="#slider">Shortcodes</a>
@@ -116,38 +116,48 @@
           </div>
         </div>
 
-        <div class="features container d-flex flex-row" id="features">
-            <div class="advantage d-flex flex-column align-items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="49" height="49" viewBox="0 0 49 49"><defs><path id="ouhda" d="M534.67 1123.72l-14.27 14.27-32.87 14.47 14.48-32.87 14.27-14.26a1.59 1.59 0 1 1 2.25 2.25l-13.85 13.84-8.57 19.47 3 3 19.46-8.58 13.85-13.84a1.59 1.59 0 1 1 2.25 2.25zm-20.17 6.5l13.33-13.34a1.59 1.59 0 1 1 2.25 2.25l-13.33 13.34a1.6 1.6 0 0 1-2.25 0 1.6 1.6 0 0 1 0-2.25zm-3.48-3.49l13.33-13.33a1.59 1.59 0 1 1 2.25 2.25L513.26 1129a1.6 1.6 0 0 1-2.24-2.26zm-3.49-3.48l13.34-13.33a1.59 1.59 0 1 1 2.25 2.25l-13.34 13.33a1.59 1.59 0 0 1-2.25 0 1.6 1.6 0 0 1 0-2.25z"/></defs><g><g transform="translate(-487 -1104)"><use xlink:href="#ouhda"/><use fill="#555" xlink:href="#ouhda"/></g></g></svg>
-                    <h2 class="advantage__title h2 text-center">Web &amp;&nbsp;App Design</h2>
-                    <p class="advantage__text text-center">
+        <div class="features container" id="features">
+          <div class="features__wrapper">
+            <div class="advantage">
+              <div class="advantage__img">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="49" height="49" viewBox="0 0 49 49"><defs><path id="ouhda" d="M534.67 1123.72l-14.27 14.27-32.87 14.47 14.48-32.87 14.27-14.26a1.59 1.59 0 1 1 2.25 2.25l-13.85 13.84-8.57 19.47 3 3 19.46-8.58 13.85-13.84a1.59 1.59 0 1 1 2.25 2.25zm-20.17 6.5l13.33-13.34a1.59 1.59 0 1 1 2.25 2.25l-13.33 13.34a1.6 1.6 0 0 1-2.25 0 1.6 1.6 0 0 1 0-2.25zm-3.48-3.49l13.33-13.33a1.59 1.59 0 1 1 2.25 2.25L513.26 1129a1.6 1.6 0 0 1-2.24-2.26zm-3.49-3.48l13.34-13.33a1.59 1.59 0 1 1 2.25 2.25l-13.34 13.33a1.59 1.59 0 0 1-2.25 0 1.6 1.6 0 0 1 0-2.25z"/></defs><g><g transform="translate(-487 -1104)"><use xlink:href="#ouhda"/><use xlink:href="#ouhda"/></g></g></svg>
+                </div>
+                <h2 class="advantage__title">Web &amp;&nbsp;App Design</h2>
+                    <p class="advantage__text">
                             Nam liber tempor cum soluta nobis eleifend option congue nihil
                             imperdiet doming id&nbsp;quod mazim.
                     </p>
             </div>
-            <div class="advantage d-flex flex-column align-items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="44" height="40" viewBox="0 0 44 40"><defs><path id="609xa" d="M833.29 1124.67l-21.44 11.56-21.44-11.56 21.44-11.56zm-3.99 5.88l3.99 2.15-21.44 11.55-21.44-11.55 3.99-2.15 17.45 9.4zm0 8.02l3.99 2.15-21.44 11.56-21.44-11.56 3.99-2.15 17.45 9.41z"/></defs><g><g transform="translate(-790 -1113)"><use xlink:href="#609xa"/><use fill="#c7b299" xlink:href="#609xa"/></g></g></svg>
-                    <h2 class="advantage__title h2 text-center">Development</h2>
-                    <p class="advantage__text text-center">
+            <div class="advantage">
+              <div class="advantage__img">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="44" height="40" viewBox="0 0 44 40"><defs><path id="609xa" d="M833.29 1124.67l-21.44 11.56-21.44-11.56 21.44-11.56zm-3.99 5.88l3.99 2.15-21.44 11.55-21.44-11.55 3.99-2.15 17.45 9.4zm0 8.02l3.99 2.15-21.44 11.56-21.44-11.56 3.99-2.15 17.45 9.41z"/></defs><g><g transform="translate(-790 -1113)"><use xlink:href="#609xa"/><use xlink:href="#609xa"/></g></g></svg>
+                </div>
+                <h2 class="advantage__title">Development</h2>
+                    <p class="advantage__text">
                             Nam liber tempor cum soluta nobis eleifend option congue nihil
                             imperdiet doming id&nbsp;quod mazim.
                     </p>
             </div>
-            <div class="advantage d-flex flex-column align-items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="44" height="44" viewBox="0 0 44 44"><defs><path id="hf3ha" d="M1130.32 1133.71c-1.44.51-2.84 1.76-3.24 2.74-.4.98-.3 2.85.36 4.23a4.33 4.33 0 0 1-.89 4.58 4.32 4.32 0 0 1-4.57.88c-1.38-.65-3.25-.76-4.24-.35-.98.4-2.22 1.8-2.73 3.24a4.33 4.33 0 0 1-3.87 2.6 4.33 4.33 0 0 1-3.86-2.6c-.51-1.44-1.76-2.83-2.74-3.24-.98-.4-2.85-.3-4.23.35a4.32 4.32 0 0 1-4.57-.88 4.33 4.33 0 0 1-.89-4.58c.66-1.38.76-3.25.36-4.23-.41-.98-1.8-2.23-3.24-2.74a4.33 4.33 0 0 1-2.61-3.86 4.32 4.32 0 0 1 2.6-3.86c1.45-.5 2.84-1.76 3.24-2.74.41-.98.3-2.85-.35-4.23a4.33 4.33 0 0 1 .89-4.58 4.33 4.33 0 0 1 4.57-.88c1.38.65 3.25.76 4.23.35.98-.4 2.23-1.8 2.74-3.24a4.33 4.33 0 0 1 3.86-2.6 4.33 4.33 0 0 1 3.87 2.6c.5 1.44 1.75 2.84 2.74 3.24.98.41 2.85.3 4.23-.35a4.33 4.33 0 0 1 4.57.88 4.33 4.33 0 0 1 .89 4.58c-.66 1.38-.76 3.25-.36 4.23.4.99 1.8 2.23 3.24 2.74 1.44.51 2.6 2.24 2.6 3.86a4.33 4.33 0 0 1-2.6 3.86zm-11.2-3.85a7.99 7.99 0 1 0-15.96-.02 7.99 7.99 0 0 0 15.97.02z"/></defs><g><g transform="translate(-1089 -1108)"><use xlink:href="#hf3ha"/><use fill="#555" xlink:href="#hf3ha"/></g></g></svg>
-                    <h2 class="advantage__title h2 text-center">Customization</h2>
-                    <p class="advantage__text text-center">
+            <div class="advantage">
+              <div class="advantage__img">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="44" height="44" viewBox="0 0 44 44"><defs><path id="hf3ha" d="M1130.32 1133.71c-1.44.51-2.84 1.76-3.24 2.74-.4.98-.3 2.85.36 4.23a4.33 4.33 0 0 1-.89 4.58 4.32 4.32 0 0 1-4.57.88c-1.38-.65-3.25-.76-4.24-.35-.98.4-2.22 1.8-2.73 3.24a4.33 4.33 0 0 1-3.87 2.6 4.33 4.33 0 0 1-3.86-2.6c-.51-1.44-1.76-2.83-2.74-3.24-.98-.4-2.85-.3-4.23.35a4.32 4.32 0 0 1-4.57-.88 4.33 4.33 0 0 1-.89-4.58c.66-1.38.76-3.25.36-4.23-.41-.98-1.8-2.23-3.24-2.74a4.33 4.33 0 0 1-2.61-3.86 4.32 4.32 0 0 1 2.6-3.86c1.45-.5 2.84-1.76 3.24-2.74.41-.98.3-2.85-.35-4.23a4.33 4.33 0 0 1 .89-4.58 4.33 4.33 0 0 1 4.57-.88c1.38.65 3.25.76 4.23.35.98-.4 2.23-1.8 2.74-3.24a4.33 4.33 0 0 1 3.86-2.6 4.33 4.33 0 0 1 3.87 2.6c.5 1.44 1.75 2.84 2.74 3.24.98.41 2.85.3 4.23-.35a4.33 4.33 0 0 1 4.57.88 4.33 4.33 0 0 1 .89 4.58c-.66 1.38-.76 3.25-.36 4.23.4.99 1.8 2.23 3.24 2.74 1.44.51 2.6 2.24 2.6 3.86a4.33 4.33 0 0 1-2.6 3.86zm-11.2-3.85a7.99 7.99 0 1 0-15.96-.02 7.99 7.99 0 0 0 15.97.02z"/></defs><g><g transform="translate(-1089 -1108)"><use xlink:href="#hf3ha"/><use xlink:href="#hf3ha"/></g></g></svg>
+                </div>
+                <h2 class="advantage__title">Customization</h2>
+                    <p class="advantage__text">
                             Nam liber tempor cum soluta nobis eleifend option congue nihil
                             imperdiet doming id&nbsp;quod mazim.
                     </p>
             </div>
-            <div class="advantage d-flex flex-column align-items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="52" height="36" viewBox="0 0 52 36"><defs><path id="x5kga" d="M1388.74 1146.15v-22.17c0-1.36 1.1-2.48 2.46-2.48H1402v-1.44a3.7 3.7 0 0 1 3.7-3.73h6.28a3.7 3.7 0 0 1 3.68 3.73v1.44h10.82a2.48 2.48 0 0 1 2.46 2.48v1.66h-26.2a6.8 6.8 0 0 0-5.75 3.6zm15.73-24.65h8.75v-1.44c0-.69-.55-1.24-1.23-1.24h-6.3c-.32 0-.63.12-.86.36-.23.24-.36.55-.36.88zm25.45 28.26a4.33 4.33 0 0 1-3.54 2.22h-35.3c-1.35 0-1.97-1-1.37-2.22l9.5-19.42a4.32 4.32 0 0 1 3.53-2.22h35.3c1.35 0 1.97 1 1.37 2.22z"/></defs><g><g transform="translate(-1388 -1116)"><use xlink:href="#x5kga"/><use fill="#555" xlink:href="#x5kga"/></g></g></svg>
-                    <h2 class="advantage__title h2 text-center">Marketing</h2>
-                    <p class="advantage__text text-center">
+            <div class="advantage">
+              <div class="advantage__img">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="52" height="36" viewBox="0 0 52 36"><defs><path id="x5kga" d="M1388.74 1146.15v-22.17c0-1.36 1.1-2.48 2.46-2.48H1402v-1.44a3.7 3.7 0 0 1 3.7-3.73h6.28a3.7 3.7 0 0 1 3.68 3.73v1.44h10.82a2.48 2.48 0 0 1 2.46 2.48v1.66h-26.2a6.8 6.8 0 0 0-5.75 3.6zm15.73-24.65h8.75v-1.44c0-.69-.55-1.24-1.23-1.24h-6.3c-.32 0-.63.12-.86.36-.23.24-.36.55-.36.88zm25.45 28.26a4.33 4.33 0 0 1-3.54 2.22h-35.3c-1.35 0-1.97-1-1.37-2.22l9.5-19.42a4.32 4.32 0 0 1 3.53-2.22h35.3c1.35 0 1.97 1 1.37 2.22z"/></defs><g><g transform="translate(-1388 -1116)"><use xlink:href="#x5kga"/><use xlink:href="#x5kga"/></g></g></svg>
+                </div>
+                <h2 class="advantage__title">Marketing</h2>
+                    <p class="advantage__text">
                             Nam liber tempor cum soluta nobis eleifend option congue nihil
                             imperdiet doming id&nbsp;quod mazim.
                     </p>
+            </div>
             </div>
         </div>
         <div class="slider" id="slider">
@@ -334,7 +344,8 @@
             </div>
         </div>
     </div>
-        <div class="clients d-flex justify-content-around" style="background: url(source/images/clients-bg.jpg)" id="clients">
+        <div class="clients" id="clients">
+          <div class="clients__wrapper">
             <div class="clients__logo">
                 <img src="source/images/icon-client-logo-1.svg">
             </div>
@@ -347,6 +358,7 @@
             <div class="clients__logo">
                 <img src="source/images/icon-client-logo-4.svg">
             </div>
+          </div>
         </div>
         <div class="social d-flex flex-fill" id="social">
             <div class="company">
