styles for .projects were set

--- a/index.html
+++ b/index.html
@@ -182,8 +182,8 @@
         </div>
         <div class="projects container-fluid" id="projects">
             <div class="projects__header">
-                <h1 class="projects__header-title h1 text-center">Our Latest Projects.</h1>
-                <p class="projects__header-text text-center">
+                <h1 class="projects__header-title">Our Latest Projects.</h1>
+                <p class="projects__header-text">
                     Investigationes demonstraverunt lectores legere me&nbsp;lius quod ii&nbsp;legunt
                     saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.
                 </p>
@@ -195,7 +195,7 @@
                 <button class="category__item">Illustration</button>
                 <button class="category__item">Photography</button>
             </div>
-            <div class="projects__wrapper d-flex  flex-wrap justify-content-center">
+            <div class="projects__wrapper">
             <!--<div class="projects__item col-sm-4 card-body">
                 <img class="projects__item-img card-img-top" src="source/images/projects-item-1-img.jpg">
                 <h3 class="projects__item-title h3 card-title text-center">Claritas Etiam Processus</h3>
@@ -227,7 +227,7 @@
                 <p class="projects__item-tag card-text text-center">Photography, Holiday</p>
             </div>-->
             </div>
-            <div class="projects__button d-flex justify-content-center">
+            <div class="projects__button">
                 <button type="button" href="#" class="projects__button-link">Load More</button>
             </div>
         </div>
