styles for .clients were set

--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
             </div>
         </div>
     </div>
-        <div class="clients" id="clients">
+        <div class="clients container-fluid" id="clients" style="background: url(source/images/clients-bg.jpg)">
           <div class="clients__wrapper">
             <div class="clients__logo">
                 <img src="source/images/icon-client-logo-1.svg">
