styles for footer were set

--- a/index.html
+++ b/index.html
@@ -440,28 +440,30 @@
             </div>
         </div>
         <footer class="page-footer d-flex">
+          <div class="page-footer__wrapper">
             <ul class="copyright list-inline d-flex">
-                <li>
-                    <a href="#" class="copyright__link">Copyright &copy;&nbsp;2015 Waxom</a>
+                <li class="copyright__item">
+                    <a href="#" class="copyright__link">Copyright &copy;&nbsp;2015 <span>Waxom</span></a>
                 </li>
-                <li>
+                <li class="copyright__item">
                     <a href="#" class="copyright__link"> Privacy Policy</a>
                 </li>
-                <li>
+                <li class="copyright__item">
                     <a href="#" class="copyright__link">FAQ</a>
                 </li>
-                <li>
+                <li class="copyright__item">
                     <a href="#" class="copyright__link">Support</a>
                 </li>
             </ul>
             <ul class="design list-inline d-flex">
                 <li class="design__item">
-                    Designed by&nbsp;ThemeFire
+                  <a class="design__link" href="#">Designed by&nbsp;<span>ThemeFire</span></a>
                 </li>
                 <li class="design__item">
-                    Only on&nbsp;Envato Market
+                  <a class="design__link" href="#">Only on&nbsp;<span>Envato Market</span></a>
                 </li>
             </ul>
+            </div>
         </footer>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
