styles for .social were set, padding-bottom for .projects was added

--- a/index.html
+++ b/index.html
@@ -361,10 +361,13 @@
           </div>
         </div>
         <div class="social d-flex flex-fill" id="social">
+          <div class="social__wrapper">
             <div class="company">
                 <div class="company__logo">
                     <img class="company__logo-img" src="source/images/icon-logo.svg">
-                    <img class="company__logo-trademark" src="source/images/icon-trademark.svg">
+                  <div class="company__logo-trademark">
+                    <a class="company__trademark-link" href="#">Waxom</a>
+                  </div>
                 </div>
                 <div class="company__text">
                         Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
@@ -372,7 +375,9 @@
                         magna aliquam erat volutpat. Ut&nbsp;wisi enim ad&nbsp;minim veniam,
                         quis nostrud exerci suscipit lobortis claritatem.
                 </div>
-                <a class="company__button">Read More</a>
+              <div class="company__button">
+                <a class="company__button-link" href="#">Read More</a>
+                </div>
             </div>
             <div class="blog">
                 <h2 class="blog__title">Recent Posts</h2>
@@ -405,7 +410,7 @@
                 <h2 class="twitter__title">Our Twitter</h2>
                 <div class="twitter__post">
                     <p class="twitter__post-text">
-                        @waxom Cum soluta nobis eleifend option congue nihil imperdiet doming
+                      <a href="#">@waxom</a> Cum soluta nobis eleifend option congue nihil imperdiet doming
                     </p>
                     <p class="twitter__post-date">
                         3&nbsp;mins ago
@@ -413,7 +418,7 @@
                 </div>
                 <div class="twitter__post">
                     <p class="twitter__post-text">
-                        Mirum est #envato notare quam littera gothica, quam nunc putamus
+                      Mirum est <a href="#">#envato</a> notare quam littera gothica, quam nunc putamus
                         parum anteposuerit litterarum
                     </p>
                     <p class="twitter__post-date">
@@ -422,7 +427,7 @@
                 </div>
                 <div class="twitter__post">
                     <p class="twitter__post-text">
-                        Soluta nobis option bit.ly/1Hniso7
+                      Soluta nobis option <a class="twitter__post-ref" href="#">bit.ly/1Hniso7</a>
                     </p>
                     <p class="twitter__post-date">
                         20&nbsp;days ago
@@ -437,6 +442,7 @@
                 <img class="widget__img col-sm-6" src="source/images/widget-photo-3-img.jpg">
                 <img class="widget__img col-sm-6" src="source/images/widget-photo-4-img.jpg">
                 </div>
+            </div>
             </div>
         </div>
         <footer class="page-footer d-flex">
