preliminary styles for .slider were set

--- a/index.html
+++ b/index.html
@@ -161,23 +161,36 @@
             </div>
         </div>
         <div class="slider" id="slider">
+          <div class="slider__wrapper">
             <div class="slider__header">
-                <h1 class="slider__header-title h1 text-center">Waxom is&nbsp;Realization of&nbsp;your Ideas.</h1>
-                <p class="slider__header-text text-center">
+                <h1 class="slider__header-title">Waxom is&nbsp;Realization of&nbsp;your Ideas.</h1>
+                <p class="slider__header-text">
                     IInvestigationes demonstraverunt lectores legere me&nbsp;lius quod ii&nbsp;legunt
                     saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.
                 </p>
             </div>
-            <img class="center-block" src="source/images/browser-center-img.jpg">
-            <div class="slider__item"></div>
-            <div class="slider__item"></div>
-            <div class="slider__item"></div>
+            <div class="slider__item-wrapper">
+            <div class="slider__item">
+              <img class="slider__item-img" src="source/images/browser-left-img.jpg">
+            </div>
+            <div class="slider__item">
+              <img class="slider__item-img" src="source/images/browser-center-img.jpg">
+            </div>
+            <div class="slider__item">
+              <img class="slider__item-img" src="source/images/browser-right-img.jpg">
+            </div>
+              </div>
+            </div>
             <div class="slider__footer">
-                <h2 class="slider__footer-title h2 text-left">Waxom Multipurpose WordPress Theme</h2>
-                <p class="slider__footer-text text-left">
+              <div class="slider__footer-info">
+                <h2 class="slider__footer-title"><span>Waxom</span> Multipurpose WordPress Theme</h2>
+                <p class="slider__footer-text">
                     Don&rsquo;t Forget to&nbsp;Rate the Template. Thanks so&nbsp;much!
                 </p>
-                <a type="button" class="button btn float-right" href="#">Purchase Now</a>
+                </div>
+              <div class="slider__footer-button">
+                <a type="button" class="slider__footer-link btn" href="#">Purchase Now</a>
+                </div>
             </div>
         </div>
         <div class="projects container-fluid" id="projects">
