:hover effects and pseudo elements for .social  were added

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 </p>
                 <ul class="mobile__list">
                     <li class="mobile__list-item">
-                        Nam liber tempor cum soluta nobis eleifend option;
+                      <p>Nam liber tempor cum soluta nobis eleifend option;</p>
                     </li>
                     <li class="mobile__list-item">
                         Option congue nihil imperdiet doming id&nbsp;quod mazim placerat facer;
@@ -396,6 +396,7 @@
                 </div>
               <div class="company__button">
                 <a class="company__button-link" href="#">Read More</a>
+                <div class="company__button-arrow"></div>
                 </div>
             </div>
             <div class="blog">
