--- a/index.html
+++ b/index.html
@@ -362,6 +362,14 @@
                 </div>
             </div>
         </div>
+          <div class="recent__button">
+            <div class="recent__button-left">
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="22" height="22" viewBox="0 0 22 22"><defs><path id="ewg6a" d="M942.583 5770.434l4.772-4.773a.737.737 0 0 1 1.04 1.041l-4.254 4.255 4.254 4.254a.736.736 0 0 1-1.04 1.04l-4.772-4.771a.73.73 0 0 1-.216-.523c0-.19.07-.378.216-.523zm3.404-10.408c6.066 0 10.985 4.917 10.985 10.985 0 6.065-4.919 10.984-10.985 10.984s-10.984-4.919-10.984-10.984c0-6.068 4.918-10.985 10.984-10.985zm0 20.497c5.245 0 9.514-4.27 9.514-9.513 0-5.245-4.269-9.513-9.514-9.513-5.244 0-9.512 4.268-9.512 9.514 0 5.242 4.268 9.512 9.512 9.512z"/></defs><g><g transform="translate(-935 -5760)"><use xlink:href="#ewg6a"/><use xlink:href="#ewg6a"/></g></g></svg>
+            </div>
+            <div class="recent__button-right">
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="22" height="22" viewBox="0 0 22 22"><defs><path id="6oxwa" d="M979.633 5770.957a.73.73 0 0 1-.216.523l-4.772 4.771a.736.736 0 0 1-1.04-1.04l4.254-4.254-4.254-4.255a.737.737 0 0 1 1.04-1.041l4.772 4.773a.732.732 0 0 1 .216.523zm7.364.053c0 6.066-4.918 10.985-10.985 10.985-6.066 0-10.984-4.919-10.984-10.984 0-6.068 4.918-10.985 10.984-10.985 6.067 0 10.985 4.917 10.985 10.985zm-1.472 0c0-5.245-4.268-9.513-9.513-9.513-5.244 0-9.513 4.268-9.513 9.514 0 5.242 4.269 9.512 9.513 9.512 5.245 0 9.513-4.27 9.513-9.513z"/></defs><g><g transform="translate(-965 -5760)"><use xlink:href="#6oxwa"/><use xlink:href="#6oxwa"/></g></g></svg>
+            </div>
+          </div>
     </div>
         <div class="clients container-fluid" id="clients" style="background: url(source/images/clients-bg.jpg)">
           <div class="clients__wrapper">
