styles for .post were improved

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
                     </p>
                   <div class="post__button">
                     <a class="post__link" href="#">Read More</a>
-                    <div class="__button-arrow"></div>
+                    <div class="post__button-arrow"></div>
                     </div>
                 </div>
             </div>
