preliminary styles and basic script were added for .projects preloader

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                     saepius. Claritas est etiam processus dynamicus, qui sequitur mutationem consuetudium.
                 </p>
             </div>
-            <div class="category">
+          <div class="category">
                 <button class="category__item">All</button>
                 <button class="category__item">Web Design</button>
                 <button class="category__item">Mobile App</button>
@@ -209,36 +209,7 @@
                 <button class="category__item">Photography</button>
             </div>
             <div class="projects__wrapper">
-            <!--<div class="projects__item col-sm-4 card-body">
-                <img class="projects__item-img card-img-top" src="source/images/projects-item-1-img.jpg">
-                <h3 class="projects__item-title h3 card-title text-center">Claritas Etiam Processus</h3>
-                <p class="projects__item-tag card-text text-center">Photography, Nature</p>
-            </div>
-            <div class="projects__item col-sm-4 card-body">
-                <img class="projects__item-img card-img-top" src="source/images/projects-item-2-img.jpg">
-                <h3 class="projects__item-title h3 card-title text-center">Quam Nutamus Farum</h3>
-                <p class="projects__item-tag card-text text-center">Graphic Design, Mock-Up</p>
-            </div>
-            <div class="projects__item col-sm-4 card-body">
-                <img class="projects__item-img card-img-top" src="source/images/projects-item-3-img.jpg">
-                <h3 class="projects__item-title h3 card-title text-center">Usus Legentis Videntur</h3>
-                <p class="projects__item-tag card-text text-center">Photography, Holiday</p>
-            </div>
-            <div class="projects__item col-sm-4 card-body">
-                <img class="projects__item-img card-img-top" src="source/images/projects-item-4-img.jpg">
-                <h3 class="projects__item-title h3 card-title text-center">Claritas Etiam Processus</h3>
-                <p class="projects__item-tag card-text text-center">Photography, Nature</p>
-            </div>
-            <div class="projects__item col-sm-4 card-body">
-                <img class="projects__item-img card-img-top" src="source/images/projects-item-5-img.jpg">
-                <h3 class="projects__item-title h3 card-title text-center">Quam Nutamus Farum</h3>
-                <p class="projects__item-tag card-text text-center">Graphic Design, Mock-Up</p>
-            </div>
-            <div class="projects__item col-sm-4 card-body">
-                <img class="projects__item-img card-img-top" src="source/images/projects-item-6-img.jpg">
-                <h3 class="projects__item-title h3 card-title text-center">Usus Legehntis Videntur</h3>
-                <p class="projects__item-tag card-text text-center">Photography, Holiday</p>
-            </div>-->
+              <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
             </div>
             <div class="projects__button">
                 <button type="button" href="#" class="projects__button-link">Load More</button>
@@ -274,16 +245,20 @@
                 </p>
                 <ul class="mobile__list">
                     <li class="mobile__list-item">
-                      <p>Nam liber tempor cum soluta nobis eleifend option;</p>
+                      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="21" height="21" viewBox="0 0 21 21"><defs><path id="9ccea" d="M946 4520.5a10.5 10.5 0 1 1-21 0 10.5 10.5 0 0 1 21 0zm-7 0a.7.7 0 0 0-.21-.5l-4.54-4.54a.7.7 0 1 0-.99 1l4.05 4.04-4.05 4.05a.7.7 0 0 0 .99.99l4.54-4.54a.7.7 0 0 0 .2-.5z"/></defs><g><g transform="translate(-925 -4510)"><use xlink:href="#9ccea"/><use fill="#c7b299" xlink:href="#9ccea"/></g></g></svg>
+                      <span>Nam liber tempor cum soluta nobis eleifend option;</span>
                     </li>
                     <li class="mobile__list-item">
-                        Option congue nihil imperdiet doming id&nbsp;quod mazim placerat facer;
+                      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="21" height="21" viewBox="0 0 21 21"><defs><path id="9ccea" d="M946 4520.5a10.5 10.5 0 1 1-21 0 10.5 10.5 0 0 1 21 0zm-7 0a.7.7 0 0 0-.21-.5l-4.54-4.54a.7.7 0 1 0-.99 1l4.05 4.04-4.05 4.05a.7.7 0 0 0 .99.99l4.54-4.54a.7.7 0 0 0 .2-.5z"/></defs><g><g transform="translate(-925 -4510)"><use xlink:href="#9ccea"/><use fill="#c7b299" xlink:href="#9ccea"/></g></g></svg>
+                      <span>Option congue nihil imperdiet doming id&nbsp;quod mazim placerat facer;</span>
                     </li>
                     <li class="mobile__list-item">
-                        Eodem modo typi, qui nunc nobis videntur parum futurum;
+                      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="21" height="21" viewBox="0 0 21 21"><defs><path id="9ccea" d="M946 4520.5a10.5 10.5 0 1 1-21 0 10.5 10.5 0 0 1 21 0zm-7 0a.7.7 0 0 0-.21-.5l-4.54-4.54a.7.7 0 1 0-.99 1l4.05 4.04-4.05 4.05a.7.7 0 0 0 .99.99l4.54-4.54a.7.7 0 0 0 .2-.5z"/></defs><g><g transform="translate(-925 -4510)"><use xlink:href="#9ccea"/><use fill="#c7b299" xlink:href="#9ccea"/></g></g></svg>
+                      <span>Eodem modo typi, qui nunc nobis videntur parum futurum;</span>
                     </li>
                     <li class="mobile__list-item">
-                        Investigationes demonstraverunt lectores
+                      <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="21" height="21" viewBox="0 0 21 21"><defs><path id="9ccea" d="M946 4520.5a10.5 10.5 0 1 1-21 0 10.5 10.5 0 0 1 21 0zm-7 0a.7.7 0 0 0-.21-.5l-4.54-4.54a.7.7 0 1 0-.99 1l4.05 4.04-4.05 4.05a.7.7 0 0 0 .99.99l4.54-4.54a.7.7 0 0 0 .2-.5z"/></defs><g><g transform="translate(-925 -4510)"><use xlink:href="#9ccea"/><use fill="#c7b299" xlink:href="#9ccea"/></g></g></svg>
+                      <span>Investigationes demonstraverunt lectores</span>
                     </li>
                 </ul>
             </div>
