styles for .project__button-link while loading .project__items were added

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                 <button class="category__item">Photography</button>
             </div>
             <div class="projects__wrapper">
-              <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
+              <!--<div class="lds-ring"><div></div><div></div><div></div><div></div></div>-->
             </div>
             <div class="projects__button">
                 <button type="button" href="#" class="projects__button-link">Load More</button>
