--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
                 <button class="category__item">Illustration</button>
                 <button class="category__item">Photography</button>
             </div>
-            <div class="projects__wrapper">
-              <!--<div class="lds-ring"><div></div><div></div><div></div><div></div></div>-->
+          <div class="projects__wrapper">
+            <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
             </div>
             <div class="projects__button">
                 <button type="button" href="#" class="projects__button-link">Load More</button>
