styles for responsive markup of .category were improved

--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
             </div>
           <div class="category">
                 <button class="category__item">All</button>
-                <button class="category__item">Web Design</button>
-                <button class="category__item">Mobile App</button>
+                <button class="category__item">Web&nbsp;Design</button>
+                <button class="category__item">Mobile&nbsp;App</button>
                 <button class="category__item">Illustration</button>
                 <button class="category__item">Photography</button>
             </div>
