preliminary markup and test script were added for header menu

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                     <a class="logo__trademark-link" href="#">Waxom</a>
                 </div>
             </div>
-            <button class="mobile-menu__button-icon" type="button" style="background: url(source/images/icon-menu-open.svg) no-repeat 50% 50%"></button>
-                <ul class="menu nav nav-tabs" role="tablist">
+            <button class="mobile-menu__button-icon navbar-toggler" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation" type="button" style="background: url(source/images/icon-menu-open.svg) no-repeat 50% 50%"></button>
+                <ul class="menu nav navbar nav-tabs collapse" role="tablist" id="navbarToggleExternalContent">
                   <li class="menu__item nav-item">
                     <a class="menu__item-link nav-link" href="#carousel">Home</a>
                   </li>
@@ -511,5 +511,6 @@
         <script src="source/script/header-carousel.js"></script>
         <script src="source/script/projects-listing.js"></script>
         <script src="source/script/scrollspy.js"></script>
+        <script src="source/script/header-menu-open.js"></script>
     </body>
 </html>
