preliminary markup for test version of responsive header menu was added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,38 @@
         <link href="source/css/style.css" rel="stylesheet">
     </head>
     <body data-spy="scroll" data-target=".nav" data-offset="160">
-        <header class="page-header" id="header">
+    <nav id="site-navigation" class="style-transparent header-skin-light dropdown-dark sticky-navigation">
+      <nav id="navigation">
+        <div class="nav-inner">
+          <div class="logo">
+            <a class="scroll">
+              <img src="source/images/icon-logo.svg">
+              <p>Waxom</p>
+            </a>
+          </div>
+          <div class="mobile-nav-buttons">
+            <a class="mobile-nav-button">
+              <i class="fa fa-bars"></i>
+            </a>
+          </div>
+          <div class="nav-menu clearfix">
+            <ul id="menu-main-navigation" class="nav">
+              <li class="menu-item">
+                <a>Home</a>
+              </li>
+              <li class="menu-item">
+                <a>Portfolio</a>
+              </li>
+              <li class="menu-item">
+                <a>Contacts</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <div id="navigation-mobile" class="navigation-mobile" style="display: block"></div>
+    </nav>
+       <!--<header class="page-header" id="header">
           <div class="page-header__wrapper container-fluid">
             <div class="logo">
               <a class="logo__img" href="#">
@@ -62,7 +93,7 @@
                   </li>
                 </ul>
               </div>
-        </header>
+        </header>-->
         <div class="carousel container-fluid p-0" id="carousel">
           <div class="arrow-prev">
             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="40" height="73" viewBox="0 0 40 73"><defs><path id="hnfua" d="M188.03 547.98L150 511.5l38.03-36.48 1.97 2-35.93 34.48L190 545.98z"/></defs><g><g transform="translate(-150 -475)"><use xlink:href="#hnfua"/><use  xlink:href="#hnfua"/></g></g></svg>
