collapsed header menu at mobile version is shown at desktop version

--- a/index.html
+++ b/index.html
@@ -14,7 +14,38 @@
         <link href="source/css/style.css" rel="stylesheet">
     </head>
     <body data-spy="scroll" data-target=".nav" data-offset="160">
-        <header class="page-header" id="header">
+    <!--<nav id="site-navigation" class="style-transparent header-skin-light dropdown-dark sticky-navigation">
+      <nav id="navigation">
+        <div class="nav-inner">
+          <div class="logo">
+            <a class="scroll">
+              <img src="source/images/icon-logo.svg">
+              <p>Waxom</p>
+            </a>
+          </div>
+          <div class="mobile-nav-buttons">
+            <a class="mobile-nav-button">
+              <i class="fa fa-bars"></i>
+            </a>
+          </div>
+          <div class="nav-menu clearfix">
+            <ul id="menu-main-navigation" class="nav">
+              <li class="menu-item">
+                <a>Home</a>
+              </li>
+              <li class="menu-item">
+                <a>Portfolio</a>
+              </li>
+              <li class="menu-item">
+                <a>Contacts</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <div id="navigation-mobile" class="navigation-mobile" style="display: block"></div>
+    </nav>-->
+       <header class="page-header" id="header">
           <div class="page-header__wrapper container-fluid">
             <div class="logo">
               <a class="logo__img" href="#">
@@ -25,7 +56,7 @@
                 </div>
             </div>
             <button class="mobile-menu__button-icon navbar-toggler" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation" type="button" style="background: url(source/images/icon-menu-open.svg) no-repeat 50% 50%"></button>
-                <ul class="menu nav navbar nav-tabs collapse" role="tablist" id="navbarToggleExternalContent">
+                <ul class="menu nav navbar" role="tablist" id="navbarToggleExternalContent">
                   <li class="menu__item nav-item">
                     <a class="menu__item-link nav-link" href="#carousel">Home</a>
                   </li>
