header menu toggle script was added

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                     <a class="logo__trademark-link" href="#">Waxom</a>
                 </div>
             </div>
-            <button class="mobile-menu__button-icon navbar-toggler" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation" type="button" style="background: url(source/images/icon-menu-open.svg) no-repeat 50% 50%"></button>
-                <ul class="menu nav navbar" role="tablist" id="navbarToggleExternalContent">
+            <button class="mobile-menu__button-icon" type="button" style="background: url(source/images/icon-menu-open.svg) no-repeat 50% 50%"></button>
+                <ul class="menu nav" role="tablist">
                   <li class="menu__item nav-item">
                     <a class="menu__item-link nav-link" href="#carousel">Home</a>
                   </li>
@@ -536,12 +536,10 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-        <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
         <script type="text/javascript" src="source/carousel/slick/slick.min.js"></script>
         <script src="source/script/header-carousel.js"></script>
         <script src="source/script/projects-listing.js"></script>
         <script src="source/script/scrollspy.js"></script>
-        <script src="source/script/header-menu-open.js"></script>
+        <script src="source/script/header-manu-toggle.js"></script>
     </body>
 </html>
