--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
         </div>
         <div class="social d-flex flex-fill" id="social">
           <div class="social__wrapper">
-            <div class="company">
+            <div class="company col-xl-3 col-lg-3 col-md-6 col-sm-6 col-xs-12">
                 <div class="company__logo">
                     <img class="company__logo-img" src="source/images/icon-logo.svg">
                   <div class="company__logo-trademark">
@@ -414,7 +414,7 @@
                 <div class="company__button-arrow"></div>
                 </div>
             </div>
-            <div class="blog">
+            <div class="blog col-xl-3 col-lg-3 col-md-6 col-sm-6 col-xs-12">
                 <h2 class="blog__title">Recent Posts</h2>
                 <div class="blog__item">
                     <p class="blog__item-date">
@@ -441,7 +441,7 @@
                     </p>
                 </div>
             </div>
-            <div class="twitter">
+            <div class="twitter col-xl-3 col-lg-3 col-md-6 col-sm-6 col-xs-12">
                 <h2 class="twitter__title">Our Twitter</h2>
                 <div class="twitter__post">
                     <p class="twitter__post-text">
@@ -469,7 +469,7 @@
                     </p>
                 </div>
             </div>
-            <div class="widget">
+            <div class="widget col-xl-3 col-lg-3 col-md-6 col-sm-6 col-xs-12">
                 <h2 class="widget__title">Dribbble Widget</h2>
                 <div class="widget__wrapper d-flex flex-wrap">
                 <img class="widget__img col-sm-6" src="source/images/widget-photo-1-img.jpg">
