margins were added to .widget block #8

--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
             </div>
             <div class="widget col-xl-3 col-lg-3 col-md-6 col-sm-6 col-xs-12">
                 <h2 class="widget__title">Dribbble Widget</h2>
-                <div class="widget__wrapper d-flex flex-wrap">
+                <div class="widget__wrapper">
                 <img class="widget__img col-sm-6" src="source/images/widget-photo-1-img.jpg">
                 <img class="widget__img col-sm-6" src="source/images/widget-photo-2-img.jpg">
                 <img class="widget__img col-sm-6" src="source/images/widget-photo-3-img.jpg">
