js- class was added to mobile menu button #12

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a class="logo__trademark-link" href="#">Waxom</a>
                 </div>
             </div>
-            <button class="mobile-menu__button-icon" type="button" style="background: url(source/images/icon-menu-open.svg) no-repeat 50% 50%; background-size: contain"></button>
+            <button class="js-mobile-menu-button mobile-menu__button-icon" type="button" style="background: url(source/images/icon-menu-open.svg) no-repeat 50% 50%; background-size: contain"></button>
                 <ul class="menu nav" role="tablist">
                   <li class="menu__item nav-item">
                     <a class="menu__item-link nav-link" href="#carousel">Home</a>
