--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
             </div>
           </div>
         </div>
-        <div class="social d-flex flex-fill" id="social">
+        <div class="social" id="social">
           <div class="social__wrapper">
             <div class="company col-xl-3 col-lg-3 col-md-6 col-sm-6 col-xs-12">
                 <div class="company__logo">
