--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
             </div>
           </div>
     </div>
-        <div class="clients container-fluid" id="clients" style="background: url(source/images/clients-bg.jpg) no-repeat 50% 50%; background-size: cover">
+        <div class="clients" id="clients" style="background: url(source/images/clients-bg.jpg) no-repeat 50% 50%; background-size: cover">
           <div class="clients__wrapper">
             <div class="clients__logo">
                 <img src="source/images/icon-client-logo-1.svg">
