.statistics wrapper was aligned #13

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 </ul>
             </div>
         </div>
-        <div class="statistics container-fluid">
+        <div class="statistics">
           <div class="statistics__wrapper">
             <div class="statistics__item">
                 <img class="statistics__item-img" src="source/images/icon-people.svg">
