.sample block was aligned at small screens #13

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </div>
           <div class="js-carousel">
             <div class="carousel__item carousel-item d-flex justify-content-center" style="background: url(source/images/header-bg.jpg) no-repeat 50% 50%; background-size: cover; height: 100vh">
-              <div class="sample align-self-center">
+              <div class="sample">
                 <h1 class="sample__title h1 text-center">Unique and Modern Design</h1>
                 <h2 class="sample__tagline h2 text-center">Portfolio PSD Template</h2>
                 <p class="sample__text text-center">
