mobile version of .mobile block was set #13

--- a/index.html
+++ b/index.html
@@ -229,7 +229,8 @@
             </div>
             </div>
         </div>
-        <div class="mobile container">
+        <div class="mobile">
+          <div class="mobile__wrapper">
             <div class="mobile__img">
                 <img src="source/images/mobile-img.jpg">
             </div>
@@ -257,6 +258,7 @@
                     </li>
                 </ul>
             </div>
+          </div>
         </div>
         <div class="statistics">
           <div class="statistics__wrapper">
