--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 </p>
                 </div>
               <div class="slider__footer-button">
-                <button type="button" class="slider__footer-link btn" href="#">Purchase Now</button>
+                <button type="button" class="slider__footer-link btn">Purchase Now</button>
                 </div>
 
             </div>
