project structure was modified #11

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="no-js" lang="en">
     <head>
         <meta charset="utf-8">
+      <meta http-equiv="x-ua-compatible" content="ie=edge">
+      <meta name="description" content="Waxom. Portfolio PSD Template">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Waxom. Portfolio PSD Template</title>
         <link rel="stylesheet" type="text/css" href="source/carousel/slick/slick.css"/>
@@ -515,9 +517,14 @@
             integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
             crossorigin="anonymous"></script>
     <script src="source/carousel/slick/slick.min.js"></script>
-    <script src="source/script/header-carousel.js"></script>
-    <script src="source/script/projects-listing.js"></script>
-    <script src="source/script/scrollspy.js"></script>
-    <script src="source/script/header-menu-toggle.js"></script>
+    <script src="source/js/header-carousel.js"></script>
+    <script src="source/js/projects-listing.js"></script>
+    <script src="source/js/scrollspy.js"></script>
+    <script src="source/js/header-menu-toggle.js"></script>
+       <!--<script>
+         window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+         ga('create', 'UA-XXXXX-Y', 'auto'); ga('send', 'pageview')
+       </script>
+       <script src="https://www.google-analytics.com/analytics.js" async defer></script>-->
     </body>
 </html>
