styles for hamburger were removed #10

--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
         <a class="logo__trademark-link" href="#">Waxom</a>
       </div>
     </div>
-    <button class="js-mobile-menu-button mobile-menu__button-icon" type="button"
-            style="background: url(source/img/icon-menu-open.svg) no-repeat 50% 50%; background-size: contain"></button>
+    <button class="js-mobile-menu-button mobile-menu__button-icon" type="button" style="background: url(source/img/icon-menu-open.svg) no-repeat 50% 50%; background-size: contain"></button>
     <ul class="menu nav" role="tablist">
       <li class="menu__item nav-item">
         <a class="menu__item-link nav-link" href="#carousel">Home</a>
@@ -662,6 +661,7 @@
 <script src="source/carousel/slick/slick.min.js"></script>
 <script src="source/js/header-carousel.js"></script>
 <script src="source/js/projects-listing.js"></script>
+<script src="source/js/listing-modal-window.js"></script>
 <script src="source/js/scrollspy.js"></script>
 <script src="source/js/header-menu-toggle.js"></script>
 <!--<script>
