preliminary version of hamburger header menu was added #10

--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
         <a class="logo__trademark-link" href="#">Waxom</a>
       </div>
     </div>
-    <button class="js-mobile-menu-button mobile-menu__button-icon" type="button" style="background: url(source/img/icon-menu-open.svg) no-repeat 50% 50%; background-size: contain"></button>
+    <button class="js-mobile-menu-button mobile-menu__button-icon hamburger hamburger--spring" type="button">
+      <span class="hamburger-box">
+    <span class="hamburger-inner"></span>
+  </span>
+    </button>
     <ul class="menu nav" role="tablist">
       <li class="menu__item nav-item">
         <a class="menu__item-link nav-link" href="#carousel">Home</a>
