--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
 <div class="features container" id="features">
   <div class="features__wrapper">
-    <div class="advantage">
+    <div class="advantage col-xl-3 col-lg-3 col-md-6 col-sm-6 col-xs-12">
       <div class="advantage__img">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="49" height="49"
              viewBox="0 0 49 49">
@@ -194,7 +194,7 @@
         imperdiet doming id&nbsp;quod mazim.
       </p>
     </div>
-    <div class="advantage">
+    <div class="advantage col-xl-3 col-lg-3 col-md-6 col-sm-6 col-xs-12">
       <div class="advantage__img">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="44" height="40"
              viewBox="0 0 44 40">
@@ -216,7 +216,7 @@
         imperdiet doming id&nbsp;quod mazim.
       </p>
     </div>
-    <div class="advantage">
+    <div class="advantage col-xl-3 col-lg-3 col-md-6 col-sm-6 col-xs-12">
       <div class="advantage__img">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="44" height="44"
              viewBox="0 0 44 44">
@@ -238,7 +238,7 @@
         imperdiet doming id&nbsp;quod mazim.
       </p>
     </div>
-    <div class="advantage">
+    <div class="advantage col-xl-3 col-lg-3 col-md-6 col-sm-6 col-xs-12">
       <div class="advantage__img">
         <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="52" height="36"
              viewBox="0 0 52 36">
