mobile version styles using bootstrap for .clients were added #16

--- a/index.html
+++ b/index.html
@@ -526,16 +526,16 @@
 <div class="clients" id="clients"
      style="background: url(source/img/clients-bg.jpg) no-repeat 50% 50%; background-size: cover">
   <div class="clients__wrapper">
-    <div class="clients__logo">
+    <div class="clients__logo col-xl-3 col-lg-3 col-md-6 col-sm-6 col-xs-12">
       <img src="source/img/icon-client-logo-1.svg" alt="Client logo">
     </div>
-    <div class="clients__logo">
+    <div class="clients__logo col-xl-3 col-lg-3 col-md-6 col-sm-6 col-xs-12">
       <img src="source/img/icon-client-logo-2.svg" alt="Client logo">
     </div>
-    <div class="clients__logo">
+    <div class="clients__logo col-xl-3 col-lg-3 col-md-6 col-sm-6 col-xs-12">
       <img src="source/img/icon-client-logo-3.svg" alt="Client logo">
     </div>
-    <div class="clients__logo">
+    <div class="clients__logo col-xl-3 col-lg-3 col-md-6 col-sm-6 col-xs-12">
       <img src="source/img/icon-client-logo-4.svg" alt="Client logo">
     </div>
   </div>
