--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
   <meta name="description" content="Waxom. Portfolio PSD Template">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Waxom. Portfolio PSD Template</title>
-  <link rel="stylesheet" type="text/css" href="node_modules/slick-carousel/slick/slick.css">
-  <link rel="stylesheet" type="text/css" href="node_modules/slick-carousel/slick/slick-theme.css">
+  <link rel="stylesheet" type="text/css" href="source/carousel/slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="source/carousel/slick/slick-theme.css"/>
+  <!--<link rel="stylesheet" type="text/css" href="node_modules/slick-carousel/slick/slick.css">
+  <link rel="stylesheet" type="text/css" href="node_modules/slick-carousel/slick/slick-theme.css">-->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,500,600,700,800" rel="stylesheet">
